[package]
name = "imphnen-chat-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4"
actix-ws = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
